# cmr

./: .gitignore  CMakeLists.txt  README.md
include/cmr/: .channel.h.swp  channel.h  cmr.h  portmgr.h  session.h  util.h  worker.h
src/: channel.c  cmr.c  portmgr.c  portmgr.h  session.c  util.c  worker.c  worker.h
test/: ms_test.c  rtprecv.c  test.c
