
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(CMR)

SET(CMR_NAME "cmr")
SET(CMR_VERSION "0.1")
SET(CMR_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(CMR_SRC_PATH ${CMR_ROOT}/src)
SET(CMR_LIB_PATH ${CMR_ROOT}/lib)
SET(CMR_INCLUDE_PATH ${CMR_ROOT}/include)


SET(LIBRARY_OUTPUT_PATH ${CMR_LIB_PATH})
INCLUDE_DIRECTORIES(
	${CMR_INCLUDE_PATH}
	${CMR_ROOT}/dist/uthash/include
)
LINK_DIRECTORIES(
	${CMR_LIB_PATH}
)
ADD_DEFINITIONS(
	-DCMR_VERSION=${CMR_VERSION}
)
ADD_LIBRARY(
	${CMR_NAME}
	SHARED
	${CMR_SRC_PATH}/cmr.c
	${CMR_SRC_PATH}/worker.c
	${CMR_SRC_PATH}/channel.c
	${CMR_SRC_PATH}/session.c
	${CMR_SRC_PATH}/portmgr.c
	${CMR_SRC_PATH}/util.c
)
TARGET_LINK_LIBRARIES(
	${CMR_NAME}
	ortp
	m
	pthread
)

