
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(CMR)

SET(CMR_NAME "cmr")
SET(CMR_VERSION "0.1")
SET(CMR_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
SET(CMR_SRC_PATH ${CMR_ROOT}/src)
SET(CMR_LIB_PATH ${CMR_ROOT}/lib)
SET(CMR_TEST_PATH ${CMR_ROOT}/test)
SET(CMR_BIN_PATH ${CMR_ROOT}/bin)
SET(CMR_INCLUDE_PATH ${CMR_ROOT}/include)

SET(CMAKE_BUILD_TYPE Debug)

SET(LIBRARY_OUTPUT_PATH ${CMR_LIB_PATH})
INCLUDE_DIRECTORIES(
	${CMR_INCLUDE_PATH}
	${CMR_ROOT}/dist/uthash/include
)
LINK_DIRECTORIES(
	${CMR_LIB_PATH}
)
ADD_DEFINITIONS(
	-DCMR_VERSION=${CMR_VERSION}
)
ADD_LIBRARY(
	${CMR_NAME}
	SHARED
	${CMR_SRC_PATH}/cmr.c
	${CMR_SRC_PATH}/worker.c
	${CMR_SRC_PATH}/channel.c
	${CMR_SRC_PATH}/session.c
	${CMR_SRC_PATH}/portmgr.c
	${CMR_SRC_PATH}/util.c
)
TARGET_LINK_LIBRARIES(
	${CMR_NAME}
	ortp
	m
	pthread
)

SET(EXECUTABLE_OUTPUT_PATH ${CMR_BIN_PATH})
ADD_EXECUTABLE(
	cmr_test
	${CMR_TEST_PATH}/test.c
)
TARGET_LINK_LIBRARIES(
	cmr_test
	cmr
	ortp
	m
	pthread
)
ADD_EXECUTABLE(
	ms_test
	${CMR_TEST_PATH}/ms_test.c
)
TARGET_LINK_LIBRARIES(
	ms_test
	mediastreamer_voip
	mediastreamer_base
	ortp
	m
	pthread
)
